--- a/apps/api-app/src/index.html
+++ b/apps/api-app/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+   <script>
+
+
+   </script>
+
+
   <app-root></app-root>
 </body>
 </html>
