--- a/apps/api-app/src/index.html
+++ b/apps/api-app/src/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>ApiApp</title>
-  <base href="/">
+  <base href="<%=base%>">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
-   <script>
-
-
+   <script type="text/javascript">
+     const appData = JSON.parse('<%=json%>');
    </script>
-
 
   <app-root></app-root>
 </body>
 </html>
+
+
