ores/auto-commit => 'set'

--- a/apps/api-app/src/index.html
+++ b/apps/api-app/src/index.html
@@ -3,15 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>ApiApp</title>
-  <base href="<%=base%>">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script>
+
 </head>
 <body>
 
    <script type="text/javascript">
-     const appData = JSON.parse('<%=json%>');
+
+     define('app-data',() => {
+       return {
+         value: JSON.parse('<%=json%>')
+       }
+     });
+
    </script>
 
   <app-root></app-root>
